# jttOS

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  build.zig  grub.cfg  i386.json  linker.ld  mod.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
boot/: .gitignore  Makefile
boot/src/: boot0.nasm
kernel/: Cargo.toml  Makefile  build.rs  i386.json  linker.ld  rust-toolchain.toml
kernel/src/: boot.nasm  critical_section.rs  device_manager.rs  entry.nasm  entry.rs  gdt.rs  global_alloc.rs  interrupts.rs  io.rs  kernel.rs  lab6.rs  lab7.rs  logo.txt  main.rs  panic.rs  syscalls.rs  tss.rs  utils.rs  vbe.nasm  x86_utils.rs
kernel/src/console/: macros.rs  sync.rs  vga.rs
kernel/src/drivers/: mod.rs  pit.rs
kernel/src/drivers/ps2/: controller.rs  key.rs  keyboard.rs  mod.rs  parser.rs
kernel/src/paging/: allocator.rs  entries.rs  mod.rs
kernel/src/process/: errors.rs  mod.rs  pagefault.rs
src/: allocator.rs  boot.nasm  circular_buffer.rs  cpuid.rs  critical_section.rs  device.rs  device_manager.rs  entry.nasm  grub.cfg  idt.rs  interrupts.rs  io.rs  irq.rs  kernel.rs  lab5.rs  lab6.rs  log.rs  logs.rs  main.rs  main.zig  multiboot.nasm  nullsync.rs  panic.rs  pic8259.rs  port.rs  ports.rs  ports.zig  ringbuffer.rs  sync.rs  uart.rs  userspace.rs  utils.rs  vga.rs  vga.zig
src/boot/: boot.nasm
src/console/: macros.rs  mod.rs  sync.rs  vga.rs
src/old/: uart.rs
userspace/: Cargo.toml  build.rs  linker.ld
userspace/src/: 2.rs  3.rs  4.rs  lib.rs  main.rs  stdlib.rs  terminal.rs
utils/: Cargo.toml
(+26 files in other folders)
