[package]
name = "userspace"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "userspace1"
path = "src/1.rs"
build = "build.rs"
test = false
bench = false

[[bin]]
name = "userspace2"
build = "build.rs"
path = "src/2.rs"
test = false
bench = false

[[bin]]
name = "userspace3"
build = "build.rs"
path = "src/3.rs"
test = false
bench = false

[[bin]]
name = "userspace4"
build = "build.rs"
path = "src/4.rs"
test = false
bench = false

[dependencies]
utils = { path = "../utils" }
